--- a/app/src/main/res/layout/item_layout.xml
+++ b/app/src/main/res/layout/item_layout.xml
@@ -5,15 +5,14 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginBottom="30dp"
+    android:layout_marginBottom="10dp"
     card_view:cardCornerRadius="4dp"
     >
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#808080"
-        android:paddingBottom="10dp">
+        android:background="#808080">
 
     <ImageView
         android:id="@+id/iv_car_picture"
@@ -31,44 +30,31 @@
         android:layout_marginLeft="20dp"
         android:layout_marginTop="10dp"
         android:textColor="#FFFFFF"
-        android:textSize="20sp"
-        />
-
-    <TextView
-        android:id="@+id/tv_modelo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/iv_car_picture"
-        app:layout_constraintLeft_toRightOf="@id/tv_titulo"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="10dp"
-        android:textColor="#FFFFFF"
-        android:textSize="20sp"
+        android:textSize="17sp"
         />
 
         <TextView
             android:id="@+id/tv_price"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
             app:layout_constraintTop_toBottomOf="@id/tv_titulo"
             app:layout_constraintLeft_toLeftOf="parent"
             android:layout_marginLeft="20dp"
-            android:textSize="20sp"
-            android:textColor="#FFFFFF"
-            android:text="Price"/>
-    
+            android:textSize="17sp"
+            android:textColor="#FFFFFF"/>
+
     <Button
         android:id="@+id/btn_details"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginTop="15dp"
+        app:layout_constraintTop_toBottomOf="@id/tv_titulo"
         android:layout_marginRight="10dp"
         android:text="Detalles"
         android:textColor="#FFFFFF"
-        android:textSize="20sp"
-        android:backgroundTint="#3333FF"/>
+        android:textSize="18sp"
+        android:backgroundTint="#6ac2c3"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
